--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -20,6 +20,7 @@
     files. Fragments are stored in the <code>src/partials</code> folder. The
     addition occurs when compiling page files, such as <code>index.html</code>.
   </p>
+  <p>testing if it is working</p>
 
   <p>
     This <code>example.html</code> file is an example of such a snippet, with
